# Mewtwo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 01-architecture.md  02-workspace.md  03-recon.md  04-surface.md  05-hunt.md  06-findings.md  07-ai.md  08-report.md  09-tui-workspace.md
mewtwo/: __init__.py  cli.py  config.py  db.py  tui.py  workspace_io.py
mewtwo/models/: __init__.py  finding.py  recon.py  session.py  surface.py  target.py
mewtwo/modules/ai/: cli.py  client.py  prompts.py  tools.py
mewtwo/modules/findings/: cli.py  cvss.py
mewtwo/modules/hunt/: cli.py  runner.py
mewtwo/modules/hunt/checks/: __init__.py  auth.py  base.py  cors.py  idor.py  info_disclosure.py  open_redirect.py  path_traversal.py  rate_limit.py  sqli.py  ssrf.py  xss.py  xxe.py
mewtwo/modules/hunt/payloads/: sqli.txt  ssrf.txt  xss.txt
mewtwo/modules/recon/: cli.py  crawler.py  js_analyzer.py  ports.py  runner.py  subdomains.py  tech.py  wayback.py
mewtwo/modules/report/: builder.py  cli.py  renderer.py  submit.py
mewtwo/modules/report/templates/: report.html.j2  report.md.j2
mewtwo/modules/surface/: cli.py  heuristics.py  mapper.py
mewtwo/storage/: __init__.py  base.py  findings.py  recon.py  sessions.py  surface.py  targets.py
mewtwo/utils/: console.py  evidence.py  http.py  process.py  validators.py
