[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mewtwo"
version = "0.1.0"
description = "AI-assisted bug bounty toolkit — attacker mindset, defender documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlite-utils>=3.35",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
mewtwo = "mewtwo.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
pdf = [
    "weasyprint>=60.0",
]
tui = [
    "textual>=0.50.0",
]
all = [
    "weasyprint>=60.0",
    "textual>=0.50.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mewtwo*"]

[tool.setuptools.package-data]
"mewtwo.modules.report" = ["templates/**/*"]
"mewtwo.modules.hunt" = ["payloads/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
